<resources>
    <string name="app_name">Timer</string>
    <string name="dialog_fire_missiles">Delete</string>
    <string name="fire">Yes</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="playDescription" translatable="false">Menu button, which shows popup menu</string>
    <string name="popupDescription" translatable="false">Button, which starts training</string>
    <string name="training_name">Training name</string>
    <string name="preparing_time">Preparing time</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="confirm">Confirm</string>
    <string name="cooldown_time">Cooldown time</string>
    <string name="rest_between_sets">Rest between cycles</string>
    <string name="sets_amount">Sets amount</string>
    <string name="cycles_amount">Cycles amount</string>
    <string name="rest_time">Rest time</string>
    <string name="working_time">Working time</string>
    <string name="change_color">Change color</string>
    <string name="current_color">Current color:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="darkMode">Use dark mode</string>
    <string name="engLocale">Use English locale</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="font_size_title">Font size</string>
    <string name="font_size_dialog_title">Choose font size</string>
    <string name="font_size_summary">Changing font size</string>
    <string name="preparing">Preparing</string>
    <string name="work">Work</string>
    <string name="rest">Rest</string>
    <string name="cooldown">Cooldown</string>
    <string name="finish">Finish</string>
    <string name="training_end">Training has finished</string>
    <string name="reset_data">Reset data</string>
    <string name="reset_data_summary">Clears all application data</string>
    <string name="reset_dialog_title">Clear data</string>
    <string name="reset_dialog_message">Are you sure you want to clear all stored data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_title">Stop timer</string>
    <string name="rest_between_cycles">Rest between cycles</string>
    <string name="notification_title">Timer notification</string>
    <string name="notification_text">Timer is running now</string>
    <string name="delete_title">Delete timer</string>
    <string name="version_name">Application version</string>
    <string name="min_value_toast">This is the minimum value</string>
</resources>